# AstroAPI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  benchmark_tests.py  docker-compose.yml  pyproject.toml
.github/workflows/: test_on_push.yml
api/: crud.py  db.py  deps.py  error_handlers.py  main.py  models.py  services.py  utils.py
api/models/: __init__.py  base.py  db.py  file.py  histo.py  project.py  render.py  variable.py
api/routes/: jobs.py  projects.py
api/services/: __init__.py  file.py  job.py  project.py  variable.py
src/: gets.py  loaders.py  processors.py  utils.py
tests/: conftest.py  test_files.py  test_projects.py
