[project]
name = "astroapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.7",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "msgpack>=1.1.0",
    "pandas>=2.2.3",
    "polars>=1.31.0",
    "pre-commit>=4.2.0",
    "pynbody>=2.0.0",
    "pytest>=8.3.5",
    "pytest-order>=1.3.0",
    "spectral-cube>=0.6.6",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--order-scope=session"
